# libluna

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile  Doxyfile  Makefile  Nintendo64.cmake  README.md
.github/: copilot-instructions.md
.github/workflows/: build-linux.yaml  build-windows.yaml
assets/: font.fnt
cmake/: LunaUtils.cmake  MinGW.cmake  Nintendo64-Toolchain.cmake  Nintendo64.cmake  dependencies.cmake  feature-support.cmake  lunaConfig.cmake.in  metadata.cmake  options.cmake  tools.cmake  unit-tests.cmake  utils.cmake
cmake/Platform/: Nintendo64.cmake
docs/sphinx/: Dockerfile  Makefile  build.sh
docs/sphinx/source/: basic-concepts.rst  build-layout.rst  coding-guidelines.rst  conf.py  index.rst  installation.rst  link-to-your-project.rst  project-structure.rst
examples/: CMakeLists.txt  common.hpp
examples/2d/: CMakeLists.txt
examples/2d/anim_sprite_32bpp/: CMakeLists.txt  main.cpp
examples/2d/sprite/: CMakeLists.txt  main.cpp
examples/2d/sprite_16bpp/: CMakeLists.txt  main.cpp
examples/2d/sprite_32bpp/: CMakeLists.txt  main.cpp
examples/2d/var_text/: CMakeLists.txt  bmfont.c  bmfont.h  main.cpp
examples/3d/: CMakeLists.txt
examples/3d/room/: CMakeLists.txt  main.cpp
examples/audio/: CMakeLists.txt
examples/audio/oscillator/: CMakeLists.txt  main.cpp
examples/basic/: CMakeLists.txt
examples/basic/bgcolor/: CMakeLists.txt  main.cpp
libluna/: AbstractRenderer.cpp  AbstractRenderer.hpp  Application-homebrew.cpp  Application.cpp  Application.hpp  ApplicationImpl.hpp  ArgParser.hpp  AudioManager.cpp  AudioManager.hpp  AudioManagerImpl.hpp  AudioNode.cpp  AudioNode.hpp  AudioNodeImpl.hpp  ButtonEvent.cpp  ButtonEvent.hpp  Camera2d.cpp  Camera2d.hpp  Camera3d.cpp  Camera3d.hpp  Canvas-homebrew.cpp  Canvas.cpp  Canvas.hpp  CanvasImpl.hpp  Clock.hpp  Color.hpp  Command.hpp  Console.cpp  Console.hpp  Drawable2d.cpp  Drawable2d.hpp  Endian.hpp  Font.cpp  Font.hpp  IdAllocator.hpp  Image.cpp  Image.hpp  Image.test.cpp  ImageLoader.hpp  ImmediateGui.cpp  ImmediateGui.hpp  (+83 more)
libluna/Audio/: AudioManager.cpp  AudioManager.hpp  AudioManagerImpl.hpp  AudioNode.cpp  AudioNode.hpp  AudioNodeImpl.hpp  DelayNode.cpp  DelayNode.hpp  GainNode.cpp  GainNode.hpp  OscillatorNode.cpp  OscillatorNode.hpp
libluna/Filesystem/: FileReader.cpp  FileReader.hpp  FileReader.test.cpp  Path.cpp  Path.hpp  Path.test.cpp
libluna/GL/: MeshBuffer.hpp  Shader.hpp  ShaderLib-homebrew.hpp  ShaderLib.hpp  SpriteBuffer.hpp  Uniform.hpp  common.hpp
libluna/GL/shaders/: 3d_frag.glsl  3d_vert.glsl  attr2d.glsl  common3d.glsl  primitive_frag.glsl  primitive_vert.glsl  sprite_frag.glsl  sprite_vert.glsl
libluna/Input/: GenericGamepad.hpp  GenericGamepadDevice.cpp  GenericGamepadDevice.hpp  Keyboard.hpp  KeyboardDevice.cpp  KeyboardDevice.hpp  KeyboardState.hpp  N3dsGamepad.hpp  N3dsGamepadDevice.cpp  N3dsGamepadDevice.hpp  N3dsGamepadState.hpp  N64Gamepad.hpp  N64GamepadDevice.cpp  N64GamepadDevice.hpp  N64GamepadState.hpp  NdsGamepad.hpp  NdsGamepadDevice.cpp  NdsGamepadDevice.hpp  NdsGamepadState.hpp  Ps5Gamepad.hpp  Ps5GamepadDevice.cpp  Ps5GamepadDevice.hpp  Ps5GamepadState.hpp  SwitchProGamepad.hpp  SwitchProGamepadDevice.cpp  SwitchProGamepadDevice.hpp  SwitchProGamepadState.hpp  Xbox360Gamepad.hpp  Xbox360GamepadDevice.cpp  Xbox360GamepadDevice.hpp  Xbox360GamepadState.hpp  XboxOneGamepad.hpp  XboxOneGamepadDevice.cpp  XboxOneGamepadDevice.hpp  XboxOneGamepadState.hpp
libluna/Internal/: AudioMetrics.hpp  DebugGui.cpp  DebugGui.hpp  DebugMetrics.hpp  GraphicsMetrics.hpp  Keyboard.hpp
libluna/Performance/: Ticker.cpp  Ticker.hpp  Timer.cpp  Timer.hpp
libluna/Renderers/: CommonRenderer.cpp  CommonRenderer.hpp  N64Renderer.cpp  N64Renderer.hpp  NdsRenderer.cpp  NdsRenderer.hpp  OpenglRenderer.cpp  OpenglRenderer.hpp  SdlRenderer.cpp  SdlRenderer.hpp
libluna/Util/: Png.cpp  Png.hpp  Png.test.cpp  Zlib.cpp  Zlib.hpp  Zlib.test.cpp
libs/glad-4.3/: CMakeLists.txt
libs/glad-4.3/include/glad/: glad.h
libs/glad-4.3/src/: glad.c
libs/libgfx/: CMakeLists.txt
libs/libgfx/libgfx/: gfxspec.txt  gfxtool.c  libgfx.c  libgfx.h
scripts/: install-dependencies.ps1  install-dependencies.sh  install-devkitpro.sh
tests/: CMakeLists.txt
tests/assets/: CMakeLists.txt  beat-layer1.opus  beat-layer2.opus  beat-layer3.opus  dungeon.gltf  font.txt  test.txt
tests/audio/music/: driver.cpp
tests/dungeon/: driver.cpp
tests/graphics/animated-sprite/: driver.cpp
tests/graphics/bgcolor/: driver.cpp
tests/graphics/canvas/: driver.cpp
tests/graphics/moving-sprites/: driver.cpp
tests/graphics/room/: driver.cpp
tests/graphics/sprite/: driver.cpp
tests/graphics/text/: driver.cpp
tests/graphics/triangle/: driver.cpp
tests/input/direct/: driver.cpp
tools/gfxtool/: CMakeLists.txt  bmfont.c  bmfont.h  encode.c  encode.h  loadpng.c  loadpng.h  main.c  surface.c  surface.h  utils.c  utils.h
tools/xxd/: CMakeLists.txt
