add_subdirectory(assets)

add_executable(canvas graphics/canvas/driver.cpp)
add_dependencies(canvas luna)
target_link_libraries(canvas PRIVATE luna gfx)
if(CMAKE_SYSTEM_NAME STREQUAL "NintendoSwitch")
  nx_create_nro(canvas ROMFS "${CMAKE_CURRENT_BINARY_DIR}/assets/assets")
endif()

add_executable(bgcolor graphics/bgcolor/driver.cpp)
add_dependencies(bgcolor luna)
target_link_libraries(bgcolor PRIVATE luna gfx)
if(CMAKE_SYSTEM_NAME STREQUAL "NintendoSwitch")
  nx_create_nro(bgcolor ROMFS "${CMAKE_CURRENT_BINARY_DIR}/assets/assets")
endif()
if(CMAKE_SYSTEM_NAME STREQUAL "Nintendo64")
  n64_create_rom(bgcolor)
endif()

add_executable(sprite graphics/sprite/driver.cpp)
add_dependencies(sprite luna)
target_link_libraries(sprite PRIVATE luna gfx)
if(CMAKE_SYSTEM_NAME STREQUAL "NintendoSwitch")
  nx_create_nro(sprite ROMFS "${CMAKE_CURRENT_BINARY_DIR}/assets/assets")
endif()

add_executable(moving-sprites graphics/moving-sprites/driver.cpp)
add_dependencies(moving-sprites luna)
target_link_libraries(moving-sprites PRIVATE luna gfx)
if(CMAKE_SYSTEM_NAME STREQUAL "NintendoSwitch")
  nx_create_nro(moving-sprites ROMFS "${CMAKE_CURRENT_BINARY_DIR}/assets/assets")
endif()

add_executable(triangle graphics/triangle/driver.cpp)
add_dependencies(triangle luna)
target_link_libraries(triangle PRIVATE luna gfx)
if(CMAKE_SYSTEM_NAME STREQUAL "NintendoSwitch")
  nx_create_nro(triangle ROMFS "${CMAKE_CURRENT_BINARY_DIR}/assets/assets")
endif()

add_executable(text graphics/text/driver.cpp)
add_dependencies(text luna)
target_link_libraries(text PRIVATE luna gfx)
if(CMAKE_SYSTEM_NAME STREQUAL "NintendoSwitch")
  nx_create_nro(text ROMFS "${CMAKE_CURRENT_BINARY_DIR}/assets/assets")
endif()
if(CMAKE_SYSTEM_NAME STREQUAL "Nintendo64")
  n64_create_rom(text DFS "${CMAKE_CURRENT_BINARY_DIR}/assets")
endif()

add_executable(room graphics/room/driver.cpp)
add_dependencies(room luna)
target_link_libraries(room PRIVATE luna gfx)
if(CMAKE_SYSTEM_NAME STREQUAL "NintendoSwitch")
  nx_create_nro(room ROMFS "${CMAKE_CURRENT_BINARY_DIR}/assets/assets")
endif()
if(CMAKE_SYSTEM_NAME STREQUAL "Nintendo64")
  n64_create_rom(room DFS "${CMAKE_CURRENT_BINARY_DIR}/assets")
endif()

add_executable(dungeon dungeon/driver.cpp)
add_dependencies(dungeon luna)
target_link_libraries(dungeon PRIVATE luna gfx assimp)
if(CMAKE_SYSTEM_NAME STREQUAL "NintendoSwitch")
  nx_create_nro(dungeon ROMFS "${CMAKE_CURRENT_BINARY_DIR}/assets/assets")
endif()
if(CMAKE_SYSTEM_NAME STREQUAL "Nintendo64")
  n64_create_rom(dungeon DFS "${CMAKE_CURRENT_BINARY_DIR}/assets")
endif()

add_executable(animated-sprite graphics/animated-sprite/driver.cpp)
add_dependencies(animated-sprite luna)
target_link_libraries(animated-sprite PRIVATE luna gfx)
if(CMAKE_SYSTEM_NAME STREQUAL "NintendoSwitch")
  nx_create_nro(animated-sprite ROMFS "${CMAKE_CURRENT_BINARY_DIR}/assets/assets")
endif()
if(CMAKE_SYSTEM_NAME STREQUAL "Nintendo64")
  n64_create_rom(animated-sprite DFS "${CMAKE_CURRENT_BINARY_DIR}/assets")
endif()

add_executable(direct-input input/direct/driver.cpp)
add_dependencies(direct-input luna)
target_link_libraries(direct-input PRIVATE luna gfx)
if(CMAKE_SYSTEM_NAME STREQUAL "NintendoSwitch")
  nx_create_nro(direct-input ROMFS "${CMAKE_CURRENT_BINARY_DIR}/assets/assets")
endif()

add_executable(audio-music audio/music/driver.cpp)
add_dependencies(audio-music luna)
target_link_libraries(audio-music PRIVATE luna gfx)
if(CMAKE_SYSTEM_NAME STREQUAL "NintendoSwitch")
  nx_create_nro(audio-music ROMFS "${CMAKE_CURRENT_BINARY_DIR}/assets/assets")
endif()

# add_executable(game-caveman games/caveman/driver.cpp)
# add_dependencies(game-caveman luna)
# target_link_libraries(game-caveman PRIVATE luna gfx)
